syntax = "proto3";

package auth;


service AuthService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}


