// Original file: server/services/Auth/proto/services/auth/v1/auth.proto


export interface GetUserResponse {
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
}

export interface GetUserResponse__Output {
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
}
